--- a/recipes/tinola.html
+++ b/recipes/tinola.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="time-box-con">
-      <h1 class="lasagna-title">Chicken Tinola</h1>
+      <h1 class="title">Chicken Tinola</h1>
       <div class="time-container">
         <div class="time-box">
           <h3 class="time">prep time</h3>
@@ -36,7 +36,7 @@
     <!-- INGREDIENTS -->
 
     <div class="ing-container">
-      <h1 class="lasagna-title">Igredients</h1>
+      <h1 class="title">Ingredients</h1>
 
       <div class="ing-box">
         <ul>
@@ -60,7 +60,7 @@
     <!-- METHOD -->
 
     <div class="method-container">
-      <h3 class="lasagna-title">Method</h3>
+      <h3 class="title">Method</h3>
       <div class="method-box">
         <ol>
           <li>
